# realtime-ai-mixing

./: .gitignore  CMakeLists.txt
include/: FilterProcessor.h  SignalGenerator.h  SignalProcessor.h
src/: FilterProcessor.cpp  SignalGenerator.cpp  SignalProcessor.cpp  main.cpp
tests/: test_FilterProcessor.cpp  test_SignalGenerator.cpp  test_SignalProcessor.cpp
